Bug 322666 - Misleading "Moving messages to trash failed. Please verify your trash in your IMAP account and retry." message
Summary: Misleading "Moving messages to trash failed. Please verify your trash in your...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.11 rc1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-21 23:09 UTC by Albert Astals Cid
Modified: 2013-10-01 20:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2013-07-21 23:09:54 UTC
I just got "Moving messages to trash failed. Please verify your trash in your IMAP account and retry." on my pop3 maildir setup.

The message doesn't make any sense since i have no IMAP at all
Comment 1 Laurent Montel 2013-07-23 08:08:16 UTC
I confirm it.
will look at
Comment 2 Laurent Montel 2013-10-01 20:51:07 UTC
Git commit 54b93bce93bcef0e174de492f64cb76830f6d083 by Montel Laurent.
Committed on 01/10/2013 at 20:50.
Pushed by mlaurent into branch 'KDE/4.11'.

Fix Bug 322666 - Misleading "Moving messages to trash failed. Please verify your trash in your IMAP account and retry." message

FIXED-IN: 4.11.3

M  +0    -1    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/54b93bce93bcef0e174de492f64cb76830f6d083