Fix Bug 322666 - Misleading "Moving messages to trash failed. Please verify your trash in your IMAP account and retry." message

FIXED-IN: 4.11.3
BUG: 322666